Fixed Kraken Overflow

--- a/asadali-portfolio/src/App.css
+++ b/asadali-portfolio/src/App.css
@@ -1,15 +1,21 @@
 .App {
   width: 100%;
   height: auto;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f0f0f0;
+  overflow: hidden;
+  position: relative;
 }
 
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: relative;
 }
 
 body.dark-mode {
